src/test/deca/codegen/valid/bibliothequeStandard/09toRadians.deca
#include "Math.decah"

{
    Math m = new Math();

    // TODO
}
