src/test/deca/codegen/invalid/bibliothequeStandard/02powMaxExponent.deca
#include "Math.decah"

{
    Math m = new Math();

    println(m._pow(512,127));           // Infinity (MAX_EXPONENT)
}
